--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     ],
     "author": "anujda09 <anujdamani9@gmail.com>",
     "license": "MIT",
-    "dependencies": {},
+    "dependencies": {
+        "axios": "^1.7.2"
+    },
     "repository": "https://git.codecrafters.io/414ec2d6f942fdbe"
 }
